<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/challenge"
        android:layout_width="244dp"
        android:layout_height="54dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/challenge"
        android:textAlignment="center"
        android:textColor="#0a6c7b"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="216dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="x done"
        android:textColor="#d18c11"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challenge" />

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="393dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.75">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDay1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/day1view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day1"
                    android:textAlignment="center"
                    android:textColor="#004451"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDay2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/day2view"
                    android:layout_width="328dp"
                    android:layout_height="match_parent"
                    android:text="@string/day2"
                    android:textAlignment="center"
                    android:textColor="#004451"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDay3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/day3view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/day3"
                    android:textAlignment="center"
                    android:textColor="#004451"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDay4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/day4view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/day4"
                    android:textAlignment="center"
                    android:textColor="#004451"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDay5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/day5view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/day5"
                    android:textAlignment="center"
                    android:textColor="#004451"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDay6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/day6view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/day6"
                    android:textAlignment="center"
                    android:textColor="#004451"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDay7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/day7view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/day7"
                    android:textAlignment="center"
                    android:textColor="#004451"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDay8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/day8view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/day8"
                    android:textAlignment="center"
                    android:textColor="#004451"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDay9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/day9view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/day9"
                    android:textAlignment="center"
                    android:textColor="#004451"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDay10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/day10view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/day10"
                    android:textAlignment="center"
                    android:textColor="#004451"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDay11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/day11view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/day11"
                    android:textAlignment="center"
                    android:textColor="#004451"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDay12"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/day12view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/day12"
                    android:textAlignment="center"
                    android:textColor="#004451"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDay13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/day13view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/day13"
                    android:textAlignment="center"
                    android:textColor="#004451"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDay14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/day14view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/day14"
                    android:textAlignment="center"
                    android:textColor="#004451"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDay15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/day15view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/day15"
                    android:textAlignment="center"
                    android:textColor="#004451"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>